Finished the main part of the plugin - downloading mappings from commit. - Also removed some classes. - Added downloading commit as an additional thread. - ValueWithByte.java - Some code refactoring.

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 group 'net.waterfallflower'
 version '1.0-SNAPSHOT'
 
+sourceSets.main.java.srcDirs 'src/main/gen'
 repositories {
     mavenCentral()
     maven {
