Some nice stuff, still Work In Progress.

--- a/src/main/resources/CursedInterpolatorLocalisation.properties
+++ b/src/main/resources/CursedInterpolatorLocalisation.properties
@@ -30,3 +30,6 @@ note.search.index_methodsfields=Methods/Fields:\n  ~ SRG Name\n  ~ Obf Name\n   
 #Mapping viewer code.
 button.search.name=Search
 button.reload.name=Reload/Load
+
+contextmenu.search.name=Search in Cursed-Interpolator
+contextmenu.search.description=Magic description...
