--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,7 +32,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="net.waterfallflower.cursedinterpolatorplugin.CursedInterpolatorSettingsStorage"/>
-        <toolWindow id="Cursed Interpolator" secondary="true" icon="AllIcons.Nodes.DataTables" anchor="right"
+        <toolWindow id="Cursed.Interpolator" secondary="true" icon="AllIcons.Nodes.DataTables" anchor="right"
                     factoryClass="net.waterfallflower.cursedinterpolatorplugin.interpolator.CursedInterpolatorWindowFactory"/>
         <applicationConfigurable parentId="tools" instance="net.waterfallflower.cursedinterpolatorplugin.interpolator.settings.CursedInterpolatorConfigurable"
                                  id="net.waterfallflower.cursedinterpolatorplugin.interpolator.settings.CursedInterpolatorConfigurable"
@@ -41,6 +41,13 @@
 
     <actions>
         <!-- Add your actions here -->
+        <action
+                id="CursedInterpolator.CM.SearchInMappings"
+                class="net.waterfallflower.cursedinterpolatorplugin.interpolator.table.action.ActionSearchInMappings"
+                text="contextmenu.search.name"
+                description="contextmenu.search.description">
+            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
+        </action>
     </actions>
 
     <resource-bundle>CursedInterpolatorLocalisation</resource-bundle>
